will/will-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: will-deploy-dev
  namespace: dev
  labels:
    app: will-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: will-dev
  template:
    metadata:
      labels:
        app: will-dev
    spec:
      containers:
      - name: will
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
