will/will-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: will-service-dev
  namespace: dev
spec:
  selector:
    app: will-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8888
