will/will-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: will-route-dev
  namespace: dev
spec:
  parentRefs:
  - name: will-gateway-dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: will-service-dev
      port: 8080
